# smart-home-system

./: .gitignore  docker-compose.yml
.github/workflows/: compile.yml
homekit-mqtt-bridge/: Cargo.toml  Dockerfile  devices.toml
homekit-mqtt-bridge/src/: device.rs  main.rs  mqtt.rs
homekit-mqtt-bridge/src/device/: yeelight_device.rs
mqtt-topic-remapper/: Dockerfile  config.toml  go.mod  go.sum  main.go
yeelight-controller/: Cargo.toml  Dockerfile
yeelight-controller/src/: application.rs  discovery.rs  main.rs  mqtt.rs  yeelight.rs
