[package]
name = "homekit-mqtt-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
hap = "0.1.0-pre.15"
paho-mqtt = "0.12.1"
tokio = { version = "1.32.0", features = ["full"] }
