[package]
name = "yeelight-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
paho-mqtt = "0.12.3"
env_logger = "0.11.0"
log = { version = "0.4.19", features = ["max_level_trace", "release_max_level_info"] }
dashmap = "5.5.3"
anyhow = "1.0"
local-ip-address = "0.5.7"
